--- a/test-cases.yml
+++ b/test-cases.yml
@@ -639,19 +639,80 @@
   expected-result: |
     Открывается категория данного товара
 
- - summary: |
-    Проверка перехода в раздел категории через хэштег на странице товара
+- summary: |
+    Проверка отображения сайта через браузер Safari
   requirement: |
-    При нажатии хэштега на странице товара должен осуществляться переход в категорию данного товара
+    Сайт должен корректно отображать блоки в браузере Safari
   prerequisites: |
     Открыта страница магазина
   test-data: |
+    MacOS Ventura 13.4.1 (c)
+    Safari Version 16.5.2 (18615.2.9.11.10)
+  steps:
+    - На странице магазина проверить отображение шапки сайта
+    - На странице магазина проверить отображение блока фильтров
+    - На странице магазина проверить отображение блока каталога
+    - Добавить товар в корзину нажав "В корзину"
+    - Перейти в корзину нажав "Корзина"
+    - На странице корзины проверить отображение страницы
+    - Оформить заказ нажав "Оформить заказ"
+    - Проверить корректное отображение окна заказа
+  expected-result: |
+    На сайте корректно отображаются блоки страницы 
+
+- summary: |
+    Проверка отображения сайта через браузер Chrome
+  requirement: |
+    Сайт должен корректно отображать блоки в браузере Chrome
+  prerequisites: |
+    Открыта страница магазина
+  test-data: |
+    MacOS Ventura 13.4.1 (c)
+    Chrome Version 115.0.5790.114 (Official Build) (arm64)
+  steps:
+    - На странице магазина проверить отображение шапки сайта
+    - На странице магазина проверить отображение блока фильтров
+    - На странице магазина проверить отображение блока каталога
+    - Добавить товар в корзину нажав "В корзину"
+    - Перейти в корзину нажав "Корзина"
+    - На странице корзины проверить отображение страницы
+    - Оформить заказ нажав "Оформить заказ"
+    - Проверить корректное отображение окна заказа
+  expected-result: |
+    На сайте корректно отображаются блоки страницы 
+
+- summary: |
+    Проверка отображение сайта через браузер Firefox
+  requirement: |
+    Сайт должен корректно отображать блоки в браузере Firefox
+  prerequisites: |
+    Открыта страница магазина
+  test-data: |
+    MacOS Ventura 13.4.1 (c)
+    Firefox Version 111.0.1 (64-битная)
+  steps:
+    - На странице магазина проверить отображение шапки сайта
+    - На странице магазина проверить отображение блока фильтров
+    - На странице магазина проверить отображение блока каталога
+    - Добавить товар в корзину нажав "В корзину"
+    - Перейти в корзину нажав "Корзина"
+    - На странице корзины проверить отображение страницы
+    - Оформить заказ нажав "Оформить заказ"
+    - Проверить корректное отображение окна заказа
+  expected-result: |
+    Сайт корректно отображает блоки страницы
+
+- summary: |
+    Проверка отображения товаров в корзине после оформления заказа
+  requirement: |
+    После оформления заказа корзина должна быть пуста и не отображать товары
+  prerequisites: |
+    Открыта корзина с добавленным товаром
+  test-data: |
     Отсутствует
   steps:
-    - Открыть товар из каталога
-    - На странице товара нажать на хэштег
+    - Оформить заказ нажав "Оформить заказ"
+    - Закрыть окно заказа нажав "Завкрыть"
+    - Обновить страницу корзины
   expected-result: |
-    Открывается категория данного товара
-
-
-    
+    Корзина пуста и не отображает товары
