--- a/testing-report.yml
+++ b/testing-report.yml
@@ -162,3 +162,31 @@
 - summary: |
     Проверка русско-английского перевода на сайте
   status: pass
+
+- summary: |
+    Проверка закрытия окна заказа через кнопку "Закрыть"
+  status: pass
+
+- summary: |
+    Проверка закрытия окна заказа через кнопку-крестик
+  status: fail
+
+- summary: |
+    Проверка перехода в раздел категории через хэштег на странице товара
+  status: fail
+
+- summary: |
+    Проверка отображения сайта через браузер Safari
+  status: fail
+
+- summary: |
+    Проверка отображения сайта через браузер Chrome
+  status: pass
+
+- summary: |
+    Проверка отображения сайта через браузер Firefox
+  status: fail
+
+- summary: |
+    Проверка отображения товаров в корзине после оформления заказа
+  status: fail
