--- a/bugreports.yml
+++ b/bugreports.yml
@@ -170,3 +170,48 @@
     Сайт корректно производит перевод на русский язык
   actual-result: |
     Сайт не производит перевод подробного описания товара на русский язык
+
+- summary: |
+    Кнопка-крестик не закрывает окно заказа
+  environment: |
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
+  steps-to-reproduce: |
+    - На странице магазина добавить товар в корзину нажав "В корзину"
+    - Открыть раздел "Корзина"
+    - В корзине оформить заказ нажав "Оформить заказ"
+    - Закрыть окно заказа нажав кнопку-крестик  
+  expected-result: |
+    Окно заказа закрывается
+  actual-result: |
+    Окно заказа не закрывается
+
+- summary: |
+    Не происходит переход в категорию через хэштег на странице товара
+  environment: |
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
+  steps-to-reproduce: |
+    - Открыть товар из каталога
+    - На странице товара нажать на хэштег  
+  expected-result: |
+    Открывается категория данного товара
+  actual-result: |
+    Категория данного товара не открывается
+
+- summary: |
+    Не происходит переход в категорию через хэштег на странице товара
+  environment: |
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
+  steps-to-reproduce: |
+    - Открыть товар из каталога
+    - На странице товара нажать на хэштег  
+  expected-result: |
+    Открывается категория данного товара
+  actual-result: |
+    Категория данного товара не открывается
+    
