--- a/requirements.yml
+++ b/requirements.yml
@@ -23,3 +23,4 @@ implicit:
   - В разделе производителей должны указываться производители из всего каталога 
   - Сайт должен иметь возможность изменения валюты
   - На странице магазина должно быть указано количество страниц в каталоге
+  - Пользователь должен иметь возможность открыть и просматривать фотографии товара на странице товара
