--- a/bugreports.yml
+++ b/bugreports.yml
@@ -85,24 +85,8 @@
   expected-result: |
     Корректное написание "Заказ успешно оформлен"
   actual-result: |
-    Некорректное написание "Заказ успешно формлен
+    Некорректное написание "Заказ успешно формлен"
     
-- summary: |
-    Не работает кнопка крестик "Закрыть" в модальном окне "Заказ успешно оформлен"
-  environment: |
-    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
-    macOS Ventura 13.4.1 (c)
-    version 1
-  steps-to-reproduce: |
-    - Открыть раздел "Магазин"
-    - Добавить товар "Iphone 9" в корзину
-    - В корзине оформить заказ нажав "Оформить заказ"
-    - Нажать кнопку крестик "Закрыть" в модальном окне "Заказ успешно оформлен"
-  expected-result: |
-    Модальное окно "Заказ успешно оформлен" закрывается
-  actual-result: |
-    Модальное окно "Заказ успешно оформлен" не закрывается. Кнопка не работает
-
 - summary: |
     После оформления заказа не меняется значение количества единиц товара в наличии 
   environment: |
@@ -202,16 +186,32 @@
     Категория данного товара не открывается
 
 - summary: |
-    Не происходит переход в категорию через хэштег на странице товара
+    Поле поиска в блоке фильтров сливается с фоном страницы через Safari
+  environment: |
+    Safari Version 16.5.2 (18615.2.9.11.10)    
+    macOS Ventura 13.4.1 (c)
+    version 1
+  steps-to-reproduce: |
+    - Открыть страницу магазина
+    - Проверить отображение блока фильтров  
+  expected-result: |
+    Корректно отображаются блоки страницы 
+  actual-result: |
+    Поле поиска не имеет четких границ и сливается с фоном страницы
+    
+- summary: |
+    В корзине отображаются товары после оформления заказа
   environment: |
     Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
     macOS Ventura 13.4.1 (c)
     version 1
   steps-to-reproduce: |
-    - Открыть товар из каталога
-    - На странице товара нажать на хэштег  
+    - На странице магазина добавить товар в корзину нажав "В корзину"
+    - Открыть корзину
+    - Оформить заказ нажав "Оформить заказ"
+    - Закрыть окно заказа нажав "Закрыть"
+    - Перезагрузить страницу корзины
   expected-result: |
-    Открывается категория данного товара
+    Корзина пуста и не отображает товары 
   actual-result: |
-    Категория данного товара не открывается
-    
+    В корзине отображается товар после оформления заказа
