--- a/bugreports.yml
+++ b/bugreports.yml
@@ -215,3 +215,17 @@
     Корзина пуста и не отображает товары 
   actual-result: |
     В корзине отображается товар после оформления заказа
+
+- summary: |
+    Не открываются и не просматриваются фотографии товара на странице товара
+  environment: |
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
+  steps-to-reproduce: |
+    - Открыть страницу товара
+    - Открыть фотографии товара нажав на них
+  expected-result: |
+    Фотографии товара просматриваются 
+  actual-result: |
+    Фотографии не открываются и не просматриваются
