--- a/testing-report.yml
+++ b/testing-report.yml
@@ -176,17 +176,45 @@
   status: fail
 
 - summary: |
-    Проверка отображения сайта через браузер Safari
+    Проверка отображения раздела "Магазин" через браузер Safari
   status: fail
 
 - summary: |
-    Проверка отображения сайта через браузер Chrome
+    Проверка отображения страницы товара через браузер Safari
   status: pass
 
 - summary: |
-    Проверка отображения сайта через браузер Firefox
-  status: fail
+    Проверка отображения раздела "Корзина" через браузер Safari
+  status: pass
+
+- summary: |
+    Проверка отображения раздела "Магазин" через браузер Chrome
+  status: pass
+
+- summary: |
+    Проверка отображения страницы товара через браузер Chrome
+  status: pass
+
+- summary: |
+    Проверка отображения раздела "Корзина" через браузер Chrome
+  status: pass
+
+- summary: |
+    Проверка отображения раздела "Магазин" через браузер Firefox
+  status: pass
+
+- summary: |
+    Проверка отображения страницы товара через браузер Firefox
+  status: pass
+
+- summary: |
+    Проверка отображения раздела "Корзина" через браузер Firefox
+  status: pass
 
 - summary: |
     Проверка отображения товаров в корзине после оформления заказа
+  status: fail
+
+- summary: |
+    Проверка просмотра фотографий товара на странице товара
   status: fail
