--- a/regress-report.yml
+++ b/regress-report.yml
@@ -162,8 +162,64 @@ test-cases:
 
   - summary: |
       Проверка русско-английского перевода на сайте
-    status: pass    
+    status: pass   
 
+  - summary: |
+      Проверка закрытия окна заказа через кнопку "Закрыть"
+    status: pass
+
+  - summary: |
+      Проверка закрытия окна заказа через кнопку-крестик
+    status: fail 
+
+  - summary: |
+      Проверка перехода в раздел категории через хэштег на странице товара
+    status: pass 
+
+  - summary: |
+      Проверка отображения раздела "Магазин" через браузер Safari
+    status: fail 
+
+  - summary: |
+      Проверка отображения страницы товара через браузер Safari
+    status: pass 
+
+  - summary: |
+      Проверка отображения раздела "Корзина" через браузер Safari
+    status: pass 
+
+  - summary: |
+      Проверка отображения раздела "Магазин" через браузер Chrome
+    status: pass 
+
+  - summary: |
+      Проверка отображения страницы товара через браузер Chrome
+    status: pass 
+
+  - summary: |
+      Проверка отображения раздела "Корзина" через браузер Chrome
+    status: pass 
+
+  - summary: |
+      Проверка отображения раздела "Магазин" через браузер Firefox
+    status: fail
+
+  - summary: |
+      Проверка отображения страницы товара через браузер Firefox
+    status: pass
+
+  - summary: |
+      Проверка отображения раздела "Корзина" через браузер Firefox
+    status: pass
+
+  - summary: |
+      Проверка отображения товаров в корзине после оформления заказа 
+     status: fail
+
+  - summary: |
+      Проверка просмотра фотографий товара на странице товара  
+    status: pass
+    
 bugreports:
   - summary: |
       Отсутствует отображение ошибки при вводе некорректных данных в поле поиска
@@ -265,3 +321,17 @@ bugreports:
       Корзина пуста. Товары удалены и не отображаются в корзине
     actual-result: |
       Товары не удалены и отображаются в корзине
+
+  - summary: |
+      Неполное отображение значения "11190" в блоке фильтрации цены
+    environment: |
+      Firefox Version 111.0.1   
+      macOS Ventura 13.4.1 (c)
+      version 2
+    steps-to-reproduce: |
+      - Открыть раздел "Магазин"
+      - Проверить отображение блока фильтров
+    expected-result: |
+      Корректно отображаются блоки страницы
+    actual-result: |
+      Неполное отображение значения "11190" в блоке фильтрации цены
