--- a/test-cases.yml
+++ b/test-cases.yml
@@ -640,9 +640,9 @@
     Открывается категория данного товара
 
 - summary: |
-    Проверка отображения сайта через браузер Safari
+    Проверка отображения раздела "Магазин" через браузер Safari
   requirement: |
-    Сайт должен корректно отображать блоки в браузере Safari
+    В разделе "Магазин" должны корректно отображаться блоки страницы в браузере Safari
   prerequisites: |
     Открыта страница магазина
   test-data: |
@@ -652,18 +652,44 @@
     - На странице магазина проверить отображение шапки сайта
     - На странице магазина проверить отображение блока фильтров
     - На странице магазина проверить отображение блока каталога
-    - Добавить товар в корзину нажав "В корзину"
-    - Перейти в корзину нажав "Корзина"
-    - На странице корзины проверить отображение страницы
+  expected-result: |
+    Корректно отображаются блоки страницы 
+
+- summary: |
+    Проверка отображения страницы товара через браузер Safari
+  requirement: |
+    На странице товара должны корректно отображаться блоки страницы в браузере Safari
+  prerequisites: |
+    Открыта страница товара
+  test-data: |
+    MacOS Ventura 13.4.1 (c)
+    Safari Version 16.5.2 (18615.2.9.11.10)
+  steps:
+    - На странице товара проверить отображение шапки сайта
+    - На странице товара проверить отображение блока карточки товара
+  expected-result: |
+    Корректно отображаются блоки страницы 
+
+- summary: |
+    Проверка отображения раздела "Корзина" через браузер Safari
+  requirement: |
+    В разделе "Корзина" должны корректно отображаться блоки страницы в браузере Safari
+  prerequisites: |
+    Открыта корзина с добавленным товаром
+  test-data: |
+    MacOS Ventura 13.4.1 (c)
+    Safari Version 16.5.2 (18615.2.9.11.10)
+  steps:
+    - На странице корзины проверить отображение шапки сайта
     - Оформить заказ нажав "Оформить заказ"
     - Проверить корректное отображение окна заказа
   expected-result: |
-    На сайте корректно отображаются блоки страницы 
+    Корректно отображаются блоки страницы
 
 - summary: |
-    Проверка отображения сайта через браузер Chrome
+    Проверка отображения раздела "Магазин" через браузер Chrome
   requirement: |
-    Сайт должен корректно отображать блоки в браузере Chrome
+    В разделе "Магазин" должны корректно отображаться блоки страницы в браузере Chrome
   prerequisites: |
     Открыта страница магазина
   test-data: |
@@ -673,34 +699,86 @@
     - На странице магазина проверить отображение шапки сайта
     - На странице магазина проверить отображение блока фильтров
     - На странице магазина проверить отображение блока каталога
-    - Добавить товар в корзину нажав "В корзину"
-    - Перейти в корзину нажав "Корзина"
-    - На странице корзины проверить отображение страницы
+  expected-result: |
+    Корректно отображаются блоки страницы 
+
+- summary: |
+    Проверка отображения страницы товара через браузер Chrome
+  requirement: |
+    На странице товара должны корректно отображаться блоки страницы в браузере Chrome
+  prerequisites: |
+    Открыта страница товара
+  test-data: |
+    MacOS Ventura 13.4.1 (c)
+    Chrome Version 115.0.5790.114 (Official Build) (arm64)
+  steps:
+    - На странице товара проверить отображение шапки сайта
+    - На странице товара проверить отображение блока карточки товара
+  expected-result: |
+    Корректно отображаются блоки страницы 
+
+- summary: |
+    Проверка отображения раздела "Корзина" через браузер Chrome
+  requirement: |
+    В разделе "Корзина" должны корректно отображаться блоки страницы в браузере Chrome
+  prerequisites: |
+    Открыта корзина с добавленным товаром
+  test-data: |
+    MacOS Ventura 13.4.1 (c)
+    Chrome Version 115.0.5790.114 (Official Build) (arm64)
+  steps:
+    - На странице корзины проверить отображение шапки сайта
     - Оформить заказ нажав "Оформить заказ"
     - Проверить корректное отображение окна заказа
   expected-result: |
-    На сайте корректно отображаются блоки страницы 
+    Корректно отображаются блоки страницы
 
 - summary: |
-    Проверка отображение сайта через браузер Firefox
+    Проверка отображения раздела "Магазин" через браузер Firefox
   requirement: |
-    Сайт должен корректно отображать блоки в браузере Firefox
+    В разделе "Магазин" должны корректно отображаться блоки страницы в браузере Firefox
   prerequisites: |
     Открыта страница магазина
   test-data: |
     MacOS Ventura 13.4.1 (c)
-    Firefox Version 111.0.1 (64-битная)
+    Firefox Version 111.0.1 
   steps:
     - На странице магазина проверить отображение шапки сайта
     - На странице магазина проверить отображение блока фильтров
     - На странице магазина проверить отображение блока каталога
-    - Добавить товар в корзину нажав "В корзину"
-    - Перейти в корзину нажав "Корзина"
-    - На странице корзины проверить отображение страницы
+  expected-result: |
+    Корректно отображаются блоки страницы 
+
+- summary: |
+    Проверка отображения страницы товара через браузер Firefox
+  requirement: |
+    На странице товара должны корректно отображаться блоки страницы в браузере Firefox
+  prerequisites: |
+    Открыта страница товара
+  test-data: |
+    MacOS Ventura 13.4.1 (c)
+    Firefox Version 111.0.1 
+  steps:
+    - На странице товара проверить отображение шапки сайта
+    - На странице товара проверить отображение блока карточки товара
+  expected-result: |
+    Корректно отображаются блоки страницы 
+
+- summary: |
+    Проверка отображения раздела "Корзина" через браузер Firefox
+  requirement: |
+    В разделе "Корзина" должны корректно отображаться блоки страницы в браузере Firefox
+  prerequisites: |
+    Открыта корзина с добавленным товаром
+  test-data: |
+    MacOS Ventura 13.4.1 (c)
+    Firefox Version 111.0.1 
+  steps:
+    - На странице корзины проверить отображение шапки сайта
     - Оформить заказ нажав "Оформить заказ"
     - Проверить корректное отображение окна заказа
   expected-result: |
-    Сайт корректно отображает блоки страницы
+    Корректно отображаются блоки страницы
 
 - summary: |
     Проверка отображения товаров в корзине после оформления заказа
@@ -713,6 +791,19 @@
   steps:
     - Оформить заказ нажав "Оформить заказ"
     - Закрыть окно заказа нажав "Завкрыть"
-    - Обновить страницу корзины
+    - Перезагрузить страницу корзины
   expected-result: |
     Корзина пуста и не отображает товары
+
+- summary: |
+    Проверка просмотра фотографий товара на странице товара
+  requirement: |
+    На странице товара можно просмотреть фотографии товара
+  prerequisites: |
+    Открыта страница товара
+  test-data: |
+    Отсутствует
+  steps:
+    - Открыть фотографии товара нажав на них
+  expected-result: |
+    Фотографии товара просматриваются
