--- a/regress-report.yml
+++ b/regress-report.yml
@@ -190,7 +190,7 @@ test-cases:
 
   - summary: |
       Проверка отображения раздела "Магазин" через браузер Chrome
-    status: pass 
+    status: fail 
 
   - summary: |
       Проверка отображения страницы товара через браузер Chrome
@@ -323,7 +323,7 @@ bugreports:
       Товары не удалены и отображаются в корзине
 
   - summary: |
-      Неполное отображение значения "11190" в блоке фильтрации цены
+      Неполное отображение значения "11190" в блоке фильтра цены
     environment: |
       Firefox Version 111.0.1   
       macOS Ventura 13.4.1 (c)
@@ -334,4 +334,4 @@ bugreports:
     expected-result: |
       Корректно отображаются блоки страницы
     actual-result: |
-      Неполное отображение значения "11190" в блоке фильтрации цены
+      Неполное отображение значения "11190" в блоке фильтра цены
