--- a/bugreports.yml
+++ b/bugreports.yml
@@ -195,9 +195,23 @@
     - Открыть страницу магазина
     - Проверить отображение блока фильтров  
   expected-result: |
-    Корректно отображаются блоки страницы 
+    Поле поиска отображается с четкими границами 
   actual-result: |
     Поле поиска не имеет четких границ и сливается с фоном страницы
+
+- summary: |
+    Не отображаются кнопки-степперы в блоке фильтра цены
+  environment: |
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
+  steps-to-reproduce: |
+    - Открыть раздел "Магазин"
+    - Проверить отображение блока фильтров 
+  expected-result: |
+    В блоке фильтра цены ячейки отображают кнопки-степперы 
+  actual-result: |
+    В блоке фильтра цены ячейки не отображают кнопки-степперы
     
 - summary: |
     В корзине отображаются товары после оформления заказа
