--- a/testing-report.yml
+++ b/testing-report.yml
@@ -189,7 +189,7 @@
 
 - summary: |
     Проверка отображения раздела "Магазин" через браузер Chrome
-  status: pass
+  status: fail
 
 - summary: |
     Проверка отображения страницы товара через браузер Chrome
